Adjusted main for responsiveness

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -32,12 +32,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Motherly</a>
+                <a class="navbar-brand" href="#"><i>Motherly</i></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Ask a mommy</a></li>
+                    <li><a href="#">Ask a momma</a></li>
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
@@ -47,38 +47,14 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img class="carousel-images" src="images/baby1.jpg" alt="...">
-                <div class="carousel-caption">
-                    <h1>Get answers to questions from moms around</h1>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/baby1.jpg" alt="...">
-                <div class="carousel-caption">
-                    <h1>Find places around you for all your baby needs</h1>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/baby1.jpg" alt="...">
-                <div class="carousel-caption">
-                	<h1>Organize playdates and meetups for you other moms</h1>
-                </div>
-            </div>
+    <div class="main-image">
+        <div class="header">
+            <h1>Motherly</h1>
         </div>
     </div>
-    <div class="row">
+    <div class="row main">
         <div class="col-md-6">
-        	<h3 class="momma-headline">Hey Momma, Sign in to your account below!</h3>
+            <h3 class="momma-headline">Hey Momma, Sign in to your account below!</h3>
             <form>
                 <div class="form-group">
                     <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Username">
@@ -89,11 +65,11 @@
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mommy-hide">
             <div id="mommy-quote">
                 <img class="mommy" src="https://s-media-cache-ak0.pinimg.com/originals/b3/c4/24/b3c424b9c13f79aa0d3273f553e1d32d.jpg" alt="Avatar">
-                <h2><span>Rebecca Flex.</span> Momma of 3.</h2>
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."</p>
+                <h3><span>Alex Hoglen.</span> Momma of Kennedy.</h3>
+                <p>"Being a new mom has been the most challenging experience of my life, having the support system that Motherly has given me has really helped make this part of my life something I will cherish forever! The ease of the app and ability to connect with other users is something you won't find anywhere else!"</p>
             </div>
         </div>
     </div>
