--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Ask a momma</a></li>
-                    <li><a href="profile.html">Profile</a></li>
-                    <li><a href="#">About</a></li>
+                	<li><a href="profile.html">Our Profile</a></li>
+                    <li><a href="ask.html">Ask a Momma</a></li>
+                    <li><a href="#">Around Us</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
