--- a/profile.html
+++ b/profile.html
@@ -37,9 +37,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Ask a momma</a></li>
-                    <li><a href="profile.html">Profile</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="profile.html">Our Profile</a></li>
+                    <li><a href="ask.html">Ask a Momma</a></li>
+                    <li><a href="#">Around Us</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
@@ -84,6 +84,8 @@
             </div>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 </body>
 
 </html>
