text format and styling

--- a/ask.html
+++ b/ask.html
@@ -49,7 +49,7 @@
     </nav>
     <div id="ask-page">
         <h1 class="ask-heading">Ask a momma</h1>
-        <p class="ask">This is a community forum where you can ask questions you have and get support from moms in your area as well as mom's all over. We are here to help each other!</p>
+        <p class="ask">This is a community forum where you can ask questions and get support from moms in your area as well as mom's all over. We are here to help each other!</p>
         <div class="panel-group accordion-main" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingOne">
