--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
     </nav>
     <div id="profile-page">
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-12">
                 <form class="profile-input">
                     <label for="exampleInputFile">Upload profile image</label>
                     <input type="file" id="exampleInputFile">
@@ -72,8 +72,8 @@
                     </div>
                 </form>
             </div>
-            <div class="col-xs-6">
-                <div class="panel panel-default profile-panel">
+            <div class="col-xs-12">
+                <div class="panel panel-default profile-panel profile-section">
                     <div class="panel-heading">
                         <h3 class="panel-title">My Profile</h3>
                     </div>
