--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
+            <a href="profile.html" class="member-link"><h5>Not a member? Click here to sign up!</h5></a>
         </div>
         <div class="col-md-6 mommy-hide">
             <div id="mommy-quote">
@@ -73,8 +74,10 @@
             </div>
         </div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
