--- a/profile.html
+++ b/profile.html
@@ -53,21 +53,26 @@
                 <form class="profile-input">
                     <label for="exampleInputFile">Upload profile image</label>
                     <input type="file" id="exampleInputFile">
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon1">@</span>
+                        <input type="text" class="form-control" placeholder="Create Username" aria-describedby="basic-addon1">
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <input type="name" class="form-control" id="exampleInputPassword" placeholder="Create Password">
+                    </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Name</label>
                         <input type="name" class="form-control" id="exampleInputEmail1" placeholder="Name">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Location</label>
-                        <input type="location" class="form-control" id="exampleInputPassword1" placeholder="Location">
+                        <input type="location" class="form-control" id="exampleInputPassword1" placeholder="Address, City, State">
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" rows="10" placeholder="About me section"></textarea>
                     </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
+                    <div class="submit">
                         <button type="submit" class="btn btn-default">Submit</button>
                     </div>
                 </form>
@@ -84,8 +89,10 @@
             </div>
         </div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
