Created user log in / log out and added restrictions to site access with jquery

--- a/ask.html
+++ b/ask.html
@@ -39,7 +39,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="profile.html">Our Profile</a></li>
                     <li><a href="ask.html">Ask a Momma</a></li>
-                    <li><a href="#">Around Us</a></li>
+                    <li><a href="aroundme.html">Around Us</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
