--- a/aroundme.html
+++ b/aroundme.html
@@ -11,7 +11,14 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+    <script src="https://use.typekit.net/svp5jao.js"></script>
+    <script>
+    try {
+        Typekit.load({
+            async: true
+        });
+    } catch (e) {}
+    </script>
 </head>
 
 <body>
@@ -40,43 +47,16 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <div id="profile-page">
-        <div class="row">
-            <div class="col-xs-12 col-md-6">
-                <form class="profile-input">
-                    <h3 class="profile-header">Create Profile</h3>
-                    <label for="exampleInputFile" class="form-group">Upload profile image</label>
-                    <input type="file" id="exampleInputFile" class="form-group">
-                    <div class="form-group">
-                        <label for="users-name">Name</label>
-                        <input type="name" class="form-control" id="" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Location</label>
-                        <input type="location" class="form-control" id="exampleInputPassword1" placeholder="Address, City, State">
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" rows="10" placeholder="About me section"></textarea>
-                    </div>
-                    <div class="submit form-group">
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </div>
-                </form>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default profile-panel profile-section">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">My Profile</h3>
-                    </div>
-                    <div class="panel-body">
-                        Profile content
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="map-location">
+        <h1>Around Us</h1>
+        <p>This map is designed and updated based on your user feedback. The more you rate and provide feedback the better the map will be for all of you mom's looking for amazing resources for you and your little one!</p>
+        <div id="map"></div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrAoCeXPjG2PkNtd7iUumcvwkpLS4QWCw&callback=initMap">
+    </script>
     <script src="scripts.js"></script>
 </body>
 
