--- a/ask.html
+++ b/ask.html
@@ -42,58 +42,13 @@
     <div id="ask-page">
         <h1 class="ask-heading">Ask a momma</h1>
         <p class="ask">This is a community forum where you can ask questions and get support from moms in your area as well as mom's all over. We are here to help each other!</p>
-        <div class="panel-group accordion-main" id="accordion" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingOne">
-                    <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Question posted by user
-        </a>
-      </h4>
-                </div>
-                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                    <div class="panel-body">
-                    </div>
-                    <div class="reply">
-                        <button type="submit" class="btn btn-default reply-btn">Reply</button>
-                    </div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingTwo">
-                    <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        </a>
-      </h4>
-                </div>
-                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                    <div class="panel-body">
-                    </div>
-                    <div class="reply">
-                        <button type="submit" class="btn btn-default reply-btn">Reply</button>
-                    </div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingThree">
-                    <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        </a>
-      </h4>
-                </div>
-                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                    <div class="panel-body">
-                    </div>
-                    <div class="reply">
-                        <button type="submit" class="btn btn-default reply-btn">Reply</button>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary btn-lg ask-btn" data-toggle="modal" data-target="#myModal">
             Post a question
         </button>
+        <hr>
+        <div id="new-posts">
+        </div>
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
