Created headline for users question and added p tag for users question, also added new modal window for users reply to questions that has username and answer

--- a/aroundme.html
+++ b/aroundme.html
@@ -49,7 +49,7 @@
     </nav>
     <div class="map-location">
         <h1>Around Us</h1>
-        <p>This map is designed and updated based on your user feedback. The more you rate and provide feedback the better the map will be for all of you mom's looking for amazing resources for you and your little one!</p>
+        <p>This map is designed and updated based on your user feedback. The more you rate and provide feedback the better the map will be for all mom's looking for amazing resources for you and your little one!</p>
         <div id="map"></div>
     </div>
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
