--- a/ask.html
+++ b/ask.html
@@ -59,7 +59,28 @@
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
+                            <textarea id="post-headline" class="form-control" rows="5" placeholder="Add a headline"></textarea>
                             <textarea id="post-question" class="form-control" rows="15" placeholder="Enter Question"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button id="post-btn" type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+             <div class="modal fade" id="reply-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Please reply with username and detailed answer</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <input type="username" id="username-reply" class="form-control" placeholder="Username"></input>
+                            <textarea id="answer-question" class="form-control" rows="15" placeholder="Answer Question"></textarea>
                         </div>
                     </div>
                     <div class="modal-footer">
