--- a/ask.html
+++ b/ask.html
@@ -80,6 +80,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
+                            <input type="text" id="=question" class="form-control" placeholder="What question are you replying to?"></input>
                             <input type="username" id="username-reply" class="form-control" placeholder="Username"></input>
                             <textarea id="answer-question" class="form-control" rows="15" placeholder="Answer Question"></textarea>
                         </div>
