--- a/aroundme.html
+++ b/aroundme.html
@@ -39,11 +39,13 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <div class="map-location">
-        <h1>Around Us</h1>
-        <p>This map is designed and updated based on your user feedback. The more you rate and provide feedback the better the map will be for all mom's looking for amazing resources for you and your little one!</p>
-        <div id="map"></div>
-        <input id="pac-input" class="form-control" type="text" placeholder="Search Box">
+    <div class="container-fluid map-page">
+        <div class="map-location">
+            <h1>Around Us</h1>
+            <p>This map is designed and updated based on your user feedback. The more you rate and provide feedback the better the map will be for all mom's looking for amazing resources for you and your little one!</p>
+            <div id="map"></div>
+            <input id="pac-input" class="form-control" type="text" placeholder="Search Box">
+        </div>
     </div>
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
